--- a/index.html
+++ b/index.html
@@ -1,34 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<script src="./js/main.js"></script>
-	<script src="./js/jquery.min.js"></script>
-	<link rel="stylesheet" href="./css/main.css">
-	<title>京东首页</title>
+  <meta charset="UTF-8">
+  <script src="./js/main.js"></script>
+  <script src="./js/jquery.min.js"></script>
+  <link rel="stylesheet" href="./css/main.css">
+  <title>京东首页</title>
 </head>
 <body>
-	<div class="full" id="header">
-		<div class="1210px header">			
-		<div class="left">
-			<SPAN>送至：北京</SPAN>
-		</div>
-		<ul class="right">
-			<li><a href="">ziwuminghui</a></li>|
-			<li><a href="">退出</a></li>|
-			<li><a href="">我的订单</a></li>|
-			<li><a href="">我的京东</a></li>|
-			<li><a href="">京东会员</a></li>|
-			<li><a href="">企业采购</a></li>|
-			<li><a href="">手机京东</a></li>|
-			<li><a href="">关注京东</a></li>|
-			<li><a href="">客户服务</a></li>|
-			<li><a href="">网站导航 </a></li>
-		</ul>
-		</div>
-	</div>
-	<div class="full search">
-		div.
-	</div>
+  <div class="full" id="header">
+    <div class="w header">     
+    <div class="left">
+      <SPAN>送至：北京</SPAN>
+    </div>
+    <ul class="right">
+      <li><a href="">ziwuminghui</a></li>|
+      <li><a href="">退出</a></li>|
+      <li><a href="">我的订单</a></li>|
+      <li><a href="">我的京东</a></li>|
+      <li><a href="">京东会员</a></li>|
+      <li><a href="">企业采购</a></li>|
+      <li><a href="">手机京东</a></li>|
+      <li><a href="">关注京东</a></li>|
+      <li><a href="">客户服务</a></li>|
+      <li><a href="">网站导航 </a></li>
+    </ul>
+    </div>
+  </div>
+    <div class="w title">
+      <div class="logo">
+      <a href="http://www.jd.com" ></a>
+      </div>
+      <div class="search">
+      <input type="text" placeholder="Mi">
+      <button class="submit"><a href="#">search</a></button>
+      <ul>
+        <li><a href="">1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
+        <li><a href="">4</a></li>
+        <li><a href="">5</a></li>
+        <li><a href="">6</a></li>
+        <li><a href="">7</a></li>
+        <li><a href="">8</a></li>
+        <li><a href="">9</a></li>
+      </ul>
+      </div>
+      <div class="mybasket"><a href="#">my goods ></a></div>
+    </div>
+    <div class="full headmenu">
+    <div class="w">
+      <ul>
+        <li><a href="">1111111</a></li>
+        <li><a href="">2111111</a></li>
+        <li><a href="">3111111</a></li>
+        <li><a href="">4111111</a></li>
+        <li><a href="">5111111</a></li>
+        <li><a href="">6111111</a></li>
+        <li><a href="">7111111</a></li>
+        <li><a href="">8111111</a></li>
+        <li><a href="">9111111</a></li>
+      </ul>
+    </div>
+
+      
+    </div>
+    <div class="bodymenu w">
+      <div id="menulist">
+        <ul>
+          <li><a href="">1lero</a></li>
+          <li><a href="">2lero</a></li>
+          <li><a href="">3lero</a></li>
+          <li><a href="">4lero</a></li>
+          <li><a href="">5lero</a></li>
+          <li><a href="">6lero</a></li>
+          <li><a href="">7lero</a></li>
+          <li><a href="">8lero</a></li>
+          <li><a href="">9lero</a></li>
+          <li><a href="">10ler</a></li>
+          <li><a href="">11ler</a></li>
+          <li><a href="">12ler</a></li>
+          <li><a href="">13ler</a></li>
+          <li><a href="">14ler</a></li>
+          <li><a href="">15ler</a></li>
+        </ul>
+      </div>
+      <div id="bodymenu_imageshow">
+      <img src="./images/1.jpg" alt="">
+      </div>
+      <div id="bodymenu_right">
+        <div class="jingdongkuaibao">jingdongkuaibao</div>
+        <div class="guanggao">
+          lsdfsafas;dfmjoweif
+        </div>
+      </div>
+    </div>
+    <div class="w today">
+      <div class="left">
+        aaa
+      </div>
+      <div class="right">
+        a box
+      </div>
+    </div>
+
+
+    <div class="w guess_like">
+    <div class="mt">
+    <div>I guess you like</div>
+    <div>change another group</div>      
+    </div>
+    <div class="mc">
+    <ul class="detail">
+      <li>
+        <div class="detail_img"><a href=""><img src="images/2.jpg" alt=""></a></div>
+        <div class="detail_info"><a href="">jdoajsdfojwneongoangolsdnfoansefoineownfanwgndnfaoinfoanwefoiewfwef
+          </a>
+          <p>$999</p></div>
+      </li>
+      <li>
+        <div class="detail_img"><a href=""><img src="images/2.jpg" alt=""></a></div>
+        <div class="detail_info"><a href="">jdoajsdfojwneongoangolsdnfoansefoineownfanwgndnfaoinfoanwefoiewfwef
+          </a>
+          <p>$999</p></div>
+      </li>
+      <li>
+        <div class="detail_img"><a href=""><img src="images/2.jpg" alt=""></a></div>
+        <div class="detail_info"><a href="">jdoajsdfojwneongoangolsdnfoansefoineownfanwgndnfaoinfoanwefoiewfwef
+          </a>
+          <p>$999</p></div>
+      </li>
+      <li>
+        <div class="detail_img"><a href=""><img src="images/2.jpg" alt=""></a></div>
+        <div class="detail_info"><a href="">jdoajsdfojwneongoangolsdnfoansefoineownfanwgndnfaoinfoanwefoiewfwef
+          </a>
+          <p>$999</p></div>
+      </li>
+      <li>
+        <div class="detail_img"><a href=""><img src="images/2.jpg" alt=""></a></div>
+        <div class="detail_info"><a href="">jdoajsdfojwneongoangolsdnfoansefoineownfanwgndnfaoinfoanwefoiewfwef
+          </a>
+          <p>$999</p></div>
+      </li>
+      <li>
+        <div class="detail_img"><a href=""><img src="images/2.jpg" alt=""></a></div>
+        <div class="detail_info"><a href="">jdoajsdfojwneongoangolsdnfoansefoineownfanwgndnfaoinfoanwefoiewfwef
+          </a>
+          <p>$999</p></div>
+      </li>
+    </ul>
+      
+    </div>
+    </div>
 </body>
 </html>
