--- a/index.html
+++ b/index.html
@@ -148,9 +148,30 @@
           </a>
           <p>$999</p></div>
       </li>
-    </ul>
-      
+    </ul>      
     </div>
     </div>
+
+    <div class="quelitylife w">
+    <div class="mt"><h3>welcome to JD quelity_life</h3></div>
+    <div class="mc">
+      <div class="quelity_1">
+    <a href="">
+          <p>new recover</p>
+          <div class="sub_tit">
+            <p>miao</p>
+            <p>wang</p>
+            <p>mie~~</p>
+          </div>     
+          <img src="images/quelity001.jpg" alt=""> 
+    </a>
+      </div>
+      <div class="quelity_2"></div>
+      <div class="quelity_3"></div>
+      <div class="quelity_4"></div>
+    </div>
+    </div>
+
+
 </body>
 </html>
