写一个三张图片组成的广告条

--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
       </div>
     </div>
     </div>
-<div class="pic_3 w">
-  <a href=""><img src="" alt="">1</a>
-  <a href=""><img src="" alt="">2</a>
-  <a href=""><img src="" alt="">3</a>
+<div class="pic_3 ">
+  <a href=""><img src="images/pic_3.jpg" alt=""></a>
+  <a href=""><img src="images/pic_3.jpg" alt=""></a>
+  <a href=""><img src="images/pic_3.jpg" alt=""></a>
 </div>
 
 </body>
